--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.15.4",
     "mongoose": "^4.12.3",
     "morgan": "^1.9.0",
-    "socket.io": "^2.0.4"
+    "socket.io": "^2.0.4",
+    "socket.io-react": "^1.2.0"
   }
 }
