--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "if-env": "^1.0.4",
     "mongoose": "^5.4.8",
     "morgan": "^1.9.1",
-    "socket.io": "^2.2.0",
-    "socket.io-react": "^1.2.0"
+    "socket.io": "^2.2.0"
   }
 }
